--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <object data="day1.txt" width="300" height="200"></object>
     </p>
   </div>
-  <h3>Section 2</h3>
+  <h3>Day2 Notes</h>
   <div>
     <p>
     Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
